Added Workflows for CS and eurocrops AT

--- a/evaluation/Eurocrops Workflow.ipynb
+++ b/evaluation/Eurocrops Workflow.ipynb
@@ -156,15 +156,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "da64cf54",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  source_column    target_column\n",
+      "0     SNAR_CODE    original_code\n",
+      "1    SNAR_BEZEI    original_name\n",
+      "2    EC_trans_n  translated_name\n",
+      "3     EC_hcat_n       HCAT3_name\n",
+      "4     EC_hcat_c       HCAT3_code\n",
+      "5     EC_hcat_n       HCAT2_name\n",
+      "6     EC_hcat_c       HCAT2_code\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from pyjedai.schema.schema_model import Schema\n",
     "\n",
-    "country = \"DE_LS\"\n",
+    "country = \"AT\"\n",
     "\n",
     "dbf_name = f\"Eurocrops/{country}/{country}_dbf.csv\"\n",
     "file_name = f\"Eurocrops/{country}/{country}.csv\"\n",
@@ -179,8 +194,10 @@
     "d2 = pd.read_csv(file_name)\n",
     "gt = pd.DataFrame(gtruth_data['matches'])\n",
     "\n",
+    "gt = gt.drop(columns = ['source_table', 'target_table'])\n",
     "\n",
-    "schema = Schema(dataset_1=d1, dataset_2= d2, ground_truth=gt, matching_type=\"SCHEMA\")"
+    "\n",
+    "schema = Schema(dataset_1=d1, dataset_2= d2, ground_truth=gt, matching_type=\"SCHEMA\")\n"
    ]
   },
   {
@@ -201,19 +218,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "28de89f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8f2c7a4a4df44e7b61d3a180a9df583",
+       "model_id": "4192bc0277544df98617847e4e930bf4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Embeddings-NN Block Building [sminilm, faiss, cuda]:   0%|          | 0/17 [00:00<?, ?it/s]"
+       "Embeddings-NN Block Building [sminilm, faiss, cuda]:   0%|          | 0/25 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -232,9 +249,9 @@
       "Runtime: 0.0003 seconds\n",
       "───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
       "Performance:\n",
-      "\tPrecision:     75.00% \n",
-      "\tRecall:        42.86%\n",
-      "\tF1-score:      54.55%\n",
+      "\tPrecision:     50.00% \n",
+      "\tRecall:        28.57%\n",
+      "\tF1-score:      36.36%\n",
       "───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
      ]
     }
@@ -260,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "f4a0da25",
    "metadata": {},
    "outputs": [
@@ -268,7 +285,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Matches found in Eurocrops-DE_LS: 4\n"
+      "Number of Matches found in Eurocrops-AT: 4\n"
      ]
     }
    ],
@@ -279,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "92bef480",
    "metadata": {},
    "outputs": [
@@ -304,8 +321,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>DE_LS-DBF</th>\n",
-       "      <th>DE_LS</th>\n",
+       "      <th>AT-DBF</th>\n",
+       "      <th>AT</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -316,32 +333,32 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>KULTURCODE</td>\n",
+       "      <td>SNAR_CODE</td>\n",
        "      <td>original_code</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>EC_trans_n</td>\n",
-       "      <td>translated_name</td>\n",
+       "      <td>INSPIRE_ID</td>\n",
+       "      <td>original_name</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>EC_org_n</td>\n",
-       "      <td>original_name</td>\n",
+       "      <td>EC_trans_n</td>\n",
+       "      <td>translated_name</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    DE_LS-DBF            DE_LS\n",
+       "       AT-DBF               AT\n",
        "0   EC_hcat_c       HCAT3_name\n",
-       "1  KULTURCODE    original_code\n",
-       "2  EC_trans_n  translated_name\n",
-       "3    EC_org_n    original_name"
+       "1   SNAR_CODE    original_code\n",
+       "2  INSPIRE_ID    original_name\n",
+       "3  EC_trans_n  translated_name"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,14 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "id": "356847cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5308972df0a4a65ba5253d3e1782b92",
+       "model_id": "f9c39749179344f2ab7d5e508276ad79",
        "version_major": 2,
        "version_minor": 0
       },
@@ -405,12 +422,12 @@
       "Method name: Unique Mapping Clustering\n",
       "Parameters: \n",
       "\tSimilarity Threshold: 0.1\n",
-      "Runtime: 0.0007 seconds\n",
+      "Runtime: 0.0003 seconds\n",
       "───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n",
       "Performance:\n",
-      "\tPrecision:    100.00% \n",
-      "\tRecall:        71.43%\n",
-      "\tF1-score:      83.33%\n",
+      "\tPrecision:     80.00% \n",
+      "\tRecall:        57.14%\n",
+      "\tF1-score:      66.67%\n",
       "───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────\n"
      ]
     }
@@ -428,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "id": "8f4b0cb2",
    "metadata": {},
    "outputs": [
@@ -436,7 +453,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of Matches found in Eurocrops-DE_LS: 5\n"
+      "Number of Matches found in Eurocrops-AT: 5\n"
      ]
     },
     {
@@ -460,34 +477,34 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>DE_LS-DBF</th>\n",
-       "      <th>DE_LS</th>\n",
+       "      <th>AT-DBF</th>\n",
+       "      <th>AT</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>SNAR_CODE</td>\n",
+       "      <td>original_code</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>EC_hcat_n</td>\n",
        "      <td>HCAT3_name</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>EC_hcat_c</td>\n",
-       "      <td>HCAT3_code</td>\n",
+       "      <td>HCAT2_code</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>EC_trans_n</td>\n",
        "      <td>translated_name</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>KULTURCODE</td>\n",
-       "      <td>original_code</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>EC_org_n</td>\n",
+       "      <td>GML_ID</td>\n",
        "      <td>original_name</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -495,15 +512,15 @@
        "</div>"
       ],
       "text/plain": [
-       "    DE_LS-DBF            DE_LS\n",
-       "0   EC_hcat_n       HCAT3_name\n",
-       "1   EC_hcat_c       HCAT3_code\n",
-       "2  EC_trans_n  translated_name\n",
-       "3  KULTURCODE    original_code\n",
-       "4    EC_org_n    original_name"
+       "       AT-DBF               AT\n",
+       "0   SNAR_CODE    original_code\n",
+       "1   EC_hcat_n       HCAT3_name\n",
+       "2   EC_hcat_c       HCAT2_code\n",
+       "3  EC_trans_n  translated_name\n",
+       "4      GML_ID    original_name"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
